--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 JWT_SECRET = mamanag
-DATABASE=postgres
-PG_HOST=db
-PG_USER=postgres
-PG_PASS=postgres
-PG_DBNM=inventory
-PG_PORT=5432
-DATABASE_URI_DEV = postgres://PG_HOST:postgres@127.0.0.1:5433/inventory
+DB_HOST=dbpostgres
+#DB_HOST=127.0.0.1                         
+DB_DRIVER=postgres
+DB_USER=postgres
+DB_PASSWORD=rustiyg
+DB_NAME=postgres
+DB_PORT=5432
