--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 JWT_SECRET = mamanag
-DB_HOST=dbpostgres
+DB_HOST=127.0.0.1 
 #DB_HOST=127.0.0.1                         
 DB_DRIVER=postgres
 DB_USER=postgres
-DB_PASSWORD=rustiyg
-DB_NAME=postgres
+DB_PASSWORD=
+DB_NAME=fiberinventory
 DB_PORT=5432
+PORT=5000
