Tambahkan grpc pada app fiber

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ JWT_SECRET = mamanag
 DB_HOST=127.0.0.1 
 #DB_HOST=127.0.0.1                         
 DB_DRIVER=postgres
-DB_USER=postgres
-DB_PASSWORD=
+DB_USER=holyraven
+DB_PASSWORD=holyraven
 DB_NAME=fiberinventory
 DB_PORT=5432
 PORT=5000
