Adding Docker-compose

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 JWT_SECRET = mamanag
-DB_HOST=127.0.0.1 
+DB_HOST=dbpostgres 
 #DB_HOST=127.0.0.1                         
 DB_DRIVER=postgres
 DB_USER=holyraven
 DB_PASSWORD=holyraven
 DB_NAME=fiberinventory
 DB_PORT=5432
-PORT=5000
+PORT_SERVER=5000
+PORT_CLIENT=5001
