Perbaiki code dan tambahkan graceful shutdown

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET = mamanag
-DB_HOST=dbpostgres 
+DB_HOST=localhost 
 #DB_HOST=127.0.0.1                         
 DB_DRIVER=postgres
 DB_USER=holyraven
